propbankbr: codebase cleanup

--- a/notebooks/propbankbr-explore.ipynb
+++ b/notebooks/propbankbr-explore.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "from propbankbr_utils import propbankbr_parser2, propbankbr_argument_stats"
+    "from propbankbr_utils import propbankbr_parser, propbankbr_argument_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -696,19 +696,19 @@
        "29  *           *           NaN  NaN  NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = propbankbr_parser2() \n",
+    "df = propbankbr_parser() \n",
     "df.head(30) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -729,32 +729,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AM-REC : 8\n",
-      "AM-MNR : 410\n",
-      "AM-PRD : 188\n",
-      "AM-NEG : 346\n",
-      "A4 : 114\n",
-      "AM-ADV : 377\n",
-      "A2 : 1406\n",
       "AM-TMP : 1155\n",
-      "A1 : 5419\n",
-      "A5 : 1\n",
-      "AM-DIS : 310\n",
-      "A3 : 150\n",
-      "AM-DIR : 13\n",
-      "AM-MED : 3\n",
-      "A0 : 3068\n",
-      "AM-EXT : 79\n",
-      "AM-CAU : 154\n",
       "AM-PNC : 157\n",
-      "AM-LOC : 715\n"
+      "A3 : 150\n",
+      "A4 : 114\n",
+      "AM-REC : 8\n",
+      "A2 : 1406\n",
+      "AM-MED : 3\n",
+      "A5 : 1\n",
+      "AM-ADV : 377\n",
+      "AM-CAU : 154\n",
+      "AM-NEG : 346\n",
+      "AM-LOC : 715\n",
+      "A1 : 5419\n",
+      "AM-DIR : 13\n",
+      "A0 : 3068\n",
+      "AM-MNR : 410\n",
+      "AM-DIS : 310\n",
+      "AM-PRD : 188\n",
+      "AM-EXT : 79\n"
      ]
     }
    ],
