propbankbr: stats done

--- a/notebooks/propbankbr-explore.ipynb
+++ b/notebooks/propbankbr-explore.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "from propbankbr_utils import propbankbr_parser, propbankbr_argument_stats"
+    "from propbankbr_utils import propbankbr_parser, propbankbr_argument_stats, propbankbr_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "29  *           *           NaN  NaN  NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,61 +708,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "propositions: 5931\n",
-      "sentences: 3348\n",
-      "verbs distinct: 1026\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('propositions:', max(df['P']))\n",
-    "print('sentences:', max(df['S']))\n",
-    "print('verbs distinct:', len(set(df['PRED']))-1)"
+    "dfdevel, dfvalid, dftest= propbankbr_split(df)\n",
+    "dftrain= pd.concat((dfdevel,dfvalid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AM-TMP : 1155\n",
-      "AM-PNC : 157\n",
-      "A3 : 150\n",
-      "A4 : 114\n",
-      "AM-REC : 8\n",
-      "A2 : 1406\n",
-      "AM-MED : 3\n",
-      "A5 : 1\n",
-      "AM-ADV : 377\n",
-      "AM-CAU : 154\n",
-      "AM-NEG : 346\n",
-      "AM-LOC : 715\n",
-      "A1 : 5419\n",
-      "AM-DIR : 13\n",
-      "A0 : 3068\n",
-      "AM-MNR : 410\n",
-      "AM-DIS : 310\n",
-      "AM-PRD : 188\n",
-      "AM-EXT : 79\n"
+      "====train database====\n",
+      "propositions: 5667\n",
+      "sentences: 3202\n",
+      "verbs distinct: 1005\n",
+      "====devel database====\n",
+      "propositions: 5098\n",
+      "sentences: 2876\n",
+      "verbs distinct: 973\n",
+      "====validation database====\n",
+      "propositions: 569\n",
+      "sentences: 325\n",
+      "verbs distinct: 256\n",
+      "====test database====\n",
+      "propositions: 264\n",
+      "sentences: 144\n",
+      "verbs distinct: 156\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('====train database====')\n",
+    "print('propositions:', max(dftrain['P'])-min(dftrain['P']))\n",
+    "print('sentences:', max(dftrain['S'])-min(dftrain['S']))\n",
+    "print('verbs distinct:', len(set(dftrain['PRED']))-1)\n",
+    "\n",
+    "print('====devel database====')\n",
+    "print('propositions:', max(dfdevel['P'])-min(dfdevel['P']))\n",
+    "print('sentences:', max(dfdevel['S'])-min(dfdevel['S']))\n",
+    "print('verbs distinct:', len(set(dfdevel['PRED']))-1)\n",
+    "\n",
+    "print('====validation database====')\n",
+    "print('propositions:', max(dfvalid['P'])-min(dfvalid['P']))\n",
+    "print('sentences:', max(dfvalid['S'])-min(dfvalid['S']))\n",
+    "print('verbs distinct:', len(set(dfvalid['PRED']))-1)\n",
+    "\n",
+    "print('====test database====')\n",
+    "print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
+    "print('sentences:', max(dftest['S'])-min(dftest['S']))\n",
+    "print('verbs distinct:', len(set(dftest['PRED']))-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARG\ttrain\tdevel\tvalid\n",
+      "AM-CAU\t152\t135\t17\t\n",
+      "A5\t1\t1\t0\t\n",
+      "AM-MED\t3\t3\t0\t\n",
+      "AM-REC\t8\t8\t0\t\n",
+      "A4\t110\t99\t11\t\n",
+      "A2\t1331\t1129\t202\t\n",
+      "AM-LOC\t686\t629\t57\t\n",
+      "AM-PRD\t182\t164\t18\t\n",
+      "AM-TMP\t1117\t1025\t92\t\n",
+      "AM-NEG\t324\t286\t38\t\n",
+      "AM-DIS\t295\t269\t26\t\n",
+      "A1\t5181\t4662\t519\t\n",
+      "AM-PNC\t153\t144\t9\t\n",
+      "AM-MNR\t392\t363\t29\t\n",
+      "AM-EXT\t78\t72\t6\t\n",
+      "A0\t2953\t2693\t260\t\n",
+      "A3\t148\t131\t17\t\n",
+      "AM-ADV\t357\t334\t23\t\n",
+      "AM-DIR\t12\t11\t1\t\n"
      ]
     }
    ],
    "source": [
     "stats = propbankbr_argument_stats(df)\n",
+    "stats_train= propbankbr_argument_stats(dftrain)\n",
+    "stats_devel= propbankbr_argument_stats(dfdevel)\n",
+    "stats_valid= propbankbr_argument_stats(dfvalid)\n",
+    "stats_test=  propbankbr_argument_stats(dftest)\n",
+    "\n",
+    "print('ARG\\ttrain\\tdevel\\tvalid')\n",
     "for key in set(stats.keys()):\n",
-    "    print(key,':',stats[key])\n",
-    "\n"
+    "    values=(key,stats_train.get(key,0), stats_devel.get(key,0), stats_valid.get(key,0))\n",
+    "    buff= '%s\\t%d\\t%d\\t%d\\t' %  values\n",
+    "    print(buff)    "
    ]
   },
   {
