--- a/notebooks/propbankbr-explore.ipynb
+++ b/notebooks/propbankbr-explore.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -726,75 +726,95 @@
      "output_type": "stream",
      "text": [
       "====train database====\n",
-      "propositions: 5667\n",
-      "sentences: 3202\n",
-      "verbs distinct: 1005\n",
-      "====devel database====\n",
-      "propositions: 5098\n",
-      "sentences: 2876\n",
-      "verbs distinct: 973\n",
-      "====validation database====\n",
-      "propositions: 569\n",
-      "sentences: 325\n",
-      "verbs distinct: 256\n",
-      "====test database====\n",
-      "propositions: 264\n",
-      "sentences: 144\n",
-      "verbs distinct: 156\n"
+      "\t\t\ttrain\t\tdevel\t\tvalid\n",
+      "Proposições\t5667 100.00\t5098 89.96\t569 10.04\t\n",
+      "Sentenças\t3202 100.00\t2876 89.82\t325 10.15\t\n",
+      "Verbos Distintos\t1005 100.00\t973 96.82\t256 25.47\t\n"
      ]
     }
    ],
    "source": [
     "print('====train database====')\n",
-    "print('propositions:', max(dftrain['P'])-min(dftrain['P']))\n",
-    "print('sentences:', max(dftrain['S'])-min(dftrain['S']))\n",
-    "print('verbs distinct:', len(set(dftrain['PRED']))-1)\n",
+    "prop_train=max(dftrain['P'])-min(dftrain['P'])\n",
+    "sent_train=max(dftrain['S'])-min(dftrain['S'])\n",
+    "verb_train=len(set(dftrain['PRED']))-1\n",
     "\n",
-    "print('====devel database====')\n",
-    "print('propositions:', max(dfdevel['P'])-min(dfdevel['P']))\n",
-    "print('sentences:', max(dfdevel['S'])-min(dfdevel['S']))\n",
-    "print('verbs distinct:', len(set(dfdevel['PRED']))-1)\n",
+    "prop_develop=max(dfdevel['P'])-min(dfdevel['P'])\n",
+    "sent_develop=max(dfdevel['S'])-min(dfdevel['S'])\n",
+    "verb_develop=len(set(dfdevel['PRED']))-1\n",
     "\n",
-    "print('====validation database====')\n",
-    "print('propositions:', max(dfvalid['P'])-min(dfvalid['P']))\n",
-    "print('sentences:', max(dfvalid['S'])-min(dfvalid['S']))\n",
-    "print('verbs distinct:', len(set(dfvalid['PRED']))-1)\n",
     "\n",
-    "print('====test database====')\n",
-    "print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
-    "print('sentences:', max(dftest['S'])-min(dftest['S']))\n",
-    "print('verbs distinct:', len(set(dftest['PRED']))-1)"
+    "prop_develop_perc= (float(prop_develop) / prop_train)*100\n",
+    "sent_develop_perc= (float(sent_develop) / sent_train)*100\n",
+    "verb_develop_perc= (float(verb_develop) / verb_train)*100\n",
+    "\n",
+    "\n",
+    "prop_valid=max(dfvalid['P'])-min(dfvalid['P'])\n",
+    "sent_valid=max(dfvalid['S'])-min(dfvalid['S'])\n",
+    "verb_valid=len(set(dfvalid['PRED']))-1\n",
+    "\n",
+    "prop_valid_perc= (float(prop_valid) / prop_train)*100\n",
+    "sent_valid_perc= (float(sent_valid) / sent_train)*100\n",
+    "verb_valid_perc= (float(verb_valid) / verb_train)*100\n",
+    "\n",
+    "print('\\t\\t\\ttrain\\t\\tdevel\\t\\tvalid')\n",
+    "values=('Proposições',prop_train,100.0,prop_develop, prop_develop_perc, prop_valid, prop_valid_perc)\n",
+    "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
+    "print(buff)    \n",
+    "values=('Sentenças',sent_train,100.0,sent_develop, sent_develop_perc, sent_valid, sent_valid_perc)\n",
+    "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
+    "print(buff)    \n",
+    "values=('Verbos Distintos',verb_train,100.0,verb_develop, verb_develop_perc, verb_valid, verb_valid_perc)\n",
+    "buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
+    "print(buff)    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# print('====test database====')\n",
+    "# print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
+    "# print('sentences:', max(dftest['S'])-min(dftest['S']))\n",
+    "# print('verbs distinct:', len(set(dftest['PRED']))-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARG\ttrain\tdevel\tvalid\n",
-      "AM-CAU\t152\t135\t17\t\n",
-      "A5\t1\t1\t0\t\n",
-      "AM-MED\t3\t3\t0\t\n",
-      "AM-REC\t8\t8\t0\t\n",
-      "A4\t110\t99\t11\t\n",
-      "A2\t1331\t1129\t202\t\n",
-      "AM-LOC\t686\t629\t57\t\n",
-      "AM-PRD\t182\t164\t18\t\n",
-      "AM-TMP\t1117\t1025\t92\t\n",
-      "AM-NEG\t324\t286\t38\t\n",
-      "AM-DIS\t295\t269\t26\t\n",
-      "A1\t5181\t4662\t519\t\n",
-      "AM-PNC\t153\t144\t9\t\n",
-      "AM-MNR\t392\t363\t29\t\n",
-      "AM-EXT\t78\t72\t6\t\n",
-      "A0\t2953\t2693\t260\t\n",
-      "A3\t148\t131\t17\t\n",
-      "AM-ADV\t357\t334\t23\t\n",
-      "AM-DIR\t12\t11\t1\t\n"
+      "ARG\ttrain\t\tdevel\t\tvalid\n",
+      "A0\t2953 100.00\t2693 91.20\t260 8.80\t\n",
+      "A1\t5181 100.00\t4662 89.98\t519 10.02\t\n",
+      "A2\t1331 100.00\t1129 84.82\t202 15.18\t\n",
+      "A3\t148 100.00\t131 88.51\t17 11.49\t\n",
+      "A4\t110 100.00\t99 90.00\t11 10.00\t\n",
+      "A5\t1 100.00\t1 100.00\t0 0.00\t\n",
+      "AM-ADV\t357 100.00\t334 93.56\t23 6.44\t\n",
+      "AM-CAU\t152 100.00\t135 88.82\t17 11.18\t\n",
+      "AM-DIR\t12 100.00\t11 91.67\t1 8.33\t\n",
+      "AM-DIS\t295 100.00\t269 91.19\t26 8.81\t\n",
+      "AM-EXT\t78 100.00\t72 92.31\t6 7.69\t\n",
+      "AM-LOC\t686 100.00\t629 91.69\t57 8.31\t\n",
+      "AM-MED\t3 100.00\t3 100.00\t0 0.00\t\n",
+      "AM-MNR\t392 100.00\t363 92.60\t29 7.40\t\n",
+      "AM-NEG\t324 100.00\t286 88.27\t38 11.73\t\n",
+      "AM-PNC\t153 100.00\t144 94.12\t9 5.88\t\n",
+      "AM-PRD\t182 100.00\t164 90.11\t18 9.89\t\n",
+      "AM-REC\t8 100.00\t8 100.00\t0 0.00\t\n",
+      "AM-TMP\t1117 100.00\t1025 91.76\t92 8.24\t\n",
+      "train total: 13483 100.0\n",
+      "devel total: 12158 90.1728102054439\n",
+      "valid total: 1325 9.827189794556107\n"
      ]
     }
    ],
@@ -805,11 +825,31 @@
     "stats_valid= propbankbr_argument_stats(dfvalid)\n",
     "stats_test=  propbankbr_argument_stats(dftest)\n",
     "\n",
-    "print('ARG\\ttrain\\tdevel\\tvalid')\n",
-    "for key in set(stats.keys()):\n",
-    "    values=(key,stats_train.get(key,0), stats_devel.get(key,0), stats_valid.get(key,0))\n",
-    "    buff= '%s\\t%d\\t%d\\t%d\\t' %  values\n",
-    "    print(buff)    "
+    "devel_total=0\n",
+    "train_total=0\n",
+    "valid_total=0\n",
+    "arguments=['A0','A1','A2','A3','A4','A5',\n",
+    "'AM-ADV','AM-CAU','AM-DIR','AM-DIS','AM-EXT','AM-LOC',\n",
+    "'AM-MED','AM-MNR','AM-NEG','AM-PNC','AM-PRD','AM-REC',\n",
+    "'AM-TMP']\n",
+    "print('ARG\\ttrain\\t\\tdevel\\t\\tvalid')\n",
+    "for key in arguments:\n",
+    "    trainvalue = stats_train.get(key,0)\n",
+    "    trainperc  = 100.0\n",
+    "    develvalue = stats_devel.get(key,0)\n",
+    "    develperc  = 100*(float(develvalue) / trainvalue)\n",
+    "    validvalue = stats_valid.get(key,0)\n",
+    "    validperc  = 100*(float(validvalue) / trainvalue)\n",
+    "    values=(key, trainvalue, trainperc, develvalue, develperc, validvalue, validperc)\n",
+    "    devel_total+=    develvalue\n",
+    "    train_total+=    trainvalue\n",
+    "    valid_total+=    validvalue\n",
+    "    buff= '%s\\t%d %.2f\\t%d %.2f\\t%d %.2f\\t' %  values\n",
+    "    print(buff)    \n",
+    "    \n",
+    "print('train total:',train_total,float(train_total)*100/train_total)    \n",
+    "print('devel total:',devel_total,float(devel_total)*100/train_total)    \n",
+    "print('valid total:',valid_total,float(valid_total)*100/train_total)    "
    ]
   },
   {
