--- a/notebooks/propbankbr-explore.ipynb
+++ b/notebooks/propbankbr-explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -696,7 +696,7 @@
        "29  *           *           NaN  NaN  NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -727,9 +727,9 @@
      "text": [
       "====train database====\n",
       "\t\t\ttrain\t\tdevel\t\tvalid\n",
-      "Proposições\t5667 100.00\t5098 89.96\t569 10.04\t\n",
-      "Sentenças\t3202 100.00\t2876 89.82\t325 10.15\t\n",
-      "Verbos Distintos\t1005 100.00\t973 96.82\t256 25.47\t\n"
+      "Proposições\t5668 100.00\t5099 89.96\t569 10.04\t\n",
+      "Sentenças\t3203 100.00\t2877 89.82\t325 10.15\t\n",
+      "Verbos Distintos\t1005 100.00\t973 96.82\t255 25.37\t\n"
      ]
     }
    ],
@@ -771,21 +771,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====test database====\n",
+      "propositions: 263\n",
+      "sentences: 143\n",
+      "verbs distinct: 156\n",
+      "====total database====\n",
+      "propositions: 5931\n",
+      "sentences: 3347\n",
+      "verbs distinct: 1026\n",
+      "propositions: 0.04434328106558759\n"
+     ]
+    }
+   ],
    "source": [
-    "# print('====test database====')\n",
-    "# print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
-    "# print('sentences:', max(dftest['S'])-min(dftest['S']))\n",
-    "# print('verbs distinct:', len(set(dftest['PRED']))-1)"
+    "print('====test database====')\n",
+    "print('propositions:', max(dftest['P'])-min(dftest['P']))\n",
+    "print('sentences:', max(dftest['S'])-min(dftest['S']))\n",
+    "print('verbs distinct:', len(set(dftest['PRED']))-1)\n",
+    "\n",
+    "print('====total database====')\n",
+    "print('propositions:', max(df['P'])-min(df['P']))\n",
+    "print('sentences:', max(df['S'])-min(df['S']))\n",
+    "print('verbs distinct:', len(set(df['PRED']))-1)\n",
+    "\n",
+    "\n",
+    "print('propositions:',(max(dftest['P'])-min(dftest['P'])) /(max(df['P'])-min(df['P']) ))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +817,8 @@
      "text": [
       "ARG\ttrain\t\tdevel\t\tvalid\n",
       "A0\t2953 100.00\t2693 91.20\t260 8.80\t\n",
-      "A1\t5181 100.00\t4662 89.98\t519 10.02\t\n",
-      "A2\t1331 100.00\t1129 84.82\t202 15.18\t\n",
+      "A1\t5182 100.00\t4663 89.98\t519 10.02\t\n",
+      "A2\t1332 100.00\t1130 84.83\t202 15.17\t\n",
       "A3\t148 100.00\t131 88.51\t17 11.49\t\n",
       "A4\t110 100.00\t99 90.00\t11 10.00\t\n",
       "A5\t1 100.00\t1 100.00\t0 0.00\t\n",
@@ -812,9 +835,9 @@
       "AM-PRD\t182 100.00\t164 90.11\t18 9.89\t\n",
       "AM-REC\t8 100.00\t8 100.00\t0 0.00\t\n",
       "AM-TMP\t1117 100.00\t1025 91.76\t92 8.24\t\n",
-      "train total: 13483 100.0\n",
-      "devel total: 12158 90.1728102054439\n",
-      "valid total: 1325 9.827189794556107\n"
+      "train total: 13485 100.0\n",
+      "devel total: 12160 90.17426770485724\n",
+      "valid total: 1325 9.825732295142751\n"
      ]
     }
    ],
@@ -851,15 +874,6 @@
     "print('devel total:',devel_total,float(devel_total)*100/train_total)    \n",
     "print('valid total:',valid_total,float(valid_total)*100/train_total)    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -878,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
