evaluation: pipeline updates

--- a/notebooks/evaluation-metrics.ipynb
+++ b/notebooks/evaluation-metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/multi_bibasic_lstm/lr5.00e-04,hs128x64/12/Yhat_valid.csv\n"
+      "../outputs/multi_bibasic_lstm/lr5.00e-04,hs128x64/41/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -27,8 +27,7 @@
     "\n",
     "MODEL_NAME='multi_bibasic_lstm'\n",
     "HPARAMS_STR='lr5.00e-04,hs128x64'\n",
-    "MODEL_V= '12'\n",
-    "INPUT_V='00'\n",
+    "MODEL_V= '41'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -44,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 10) (12298, 1)\n"
+      "(12298, 10) (12298, 3)\n"
      ]
     }
    ],
@@ -63,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 11)\n"
+      "(12298, 13)\n"
      ]
     }
    ],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,10 +125,14 @@
        "      <th>M_R</th>\n",
        "      <th>ARG</th>\n",
        "      <th>ARG_Y</th>\n",
-       "      <th>Yhat</th>\n",
+       "      <th>PROP</th>\n",
+       "      <th>Y_0</th>\n",
+       "      <th>Y_1</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IDX</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -156,7 +159,9 @@
        "      <td>0</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>(A1*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -170,7 +175,9 @@
        "      <td>0</td>\n",
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>*)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -184,7 +191,9 @@
        "      <td>0</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>(A2*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -198,7 +207,9 @@
        "      <td>1</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>V</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -212,23 +223,33 @@
        "      <td>1</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
+       "      <td>5100</td>\n",
        "      <td>A2</td>\n",
+       "      <td>*</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        ID     S  P   P_S        FORM      LEMMA   PRED  M_R   ARG ARG_Y Yhat\n",
-       "IDX                                                                          \n",
-       "123846   1  2879  1  5100       Entre      entre  estar    0  (A2*    A2   A2\n",
-       "123847   2  2879  1  5100          os          o  estar    0     *    A2   A2\n",
-       "123848   3  2879  1  5100  convidados  convidado  estar    0    *)    A2   A1\n",
-       "123849   4  2879  1  5100       estão      estar  estar    1  (V*)     V    V\n",
-       "123850   5  2879  1  5100           o          o  estar    1  (A1*    A1   A2"
+       "        ID     S  P   P_S        FORM      LEMMA   PRED  M_R   ARG ARG_Y  \\\n",
+       "IDX                                                                        \n",
+       "123846   1  2879  1  5100       Entre      entre  estar    0  (A2*    A2   \n",
+       "123847   2  2879  1  5100          os          o  estar    0     *    A2   \n",
+       "123848   3  2879  1  5100  convidados  convidado  estar    0    *)    A2   \n",
+       "123849   4  2879  1  5100       estão      estar  estar    1  (V*)     V   \n",
+       "123850   5  2879  1  5100           o          o  estar    1  (A1*    A1   \n",
+       "\n",
+       "        PROP Y_0   Y_1  \n",
+       "IDX                     \n",
+       "123846  5100  A1  (A1*  \n",
+       "123847  5100  A1    *)  \n",
+       "123848  5100  A2  (A2*  \n",
+       "123849  5100  A2     *  \n",
+       "123850  5100  A2     *  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,15 +283,17 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>Yhat</th>\n",
+       "      <th>Y_1</th>\n",
+       "      <th>(A0*</th>\n",
+       "      <th>(A1*</th>\n",
+       "      <th>(A1*)</th>\n",
+       "      <th>(A2*</th>\n",
        "      <th>*</th>\n",
-       "      <th>A0</th>\n",
-       "      <th>A1</th>\n",
-       "      <th>A2</th>\n",
-       "      <th>V</th>\n",
+       "      <th>*)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ARG_Y</th>\n",
+       "      <th>ARG</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -280,67 +303,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>(A0*</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(A1*</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(A2*</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(V*)</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>*</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>V</th>\n",
-       "      <td>0</td>\n",
+       "      <th>*)</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Yhat   *  A0  A1  A2  V\n",
-       "ARG_Y                  \n",
-       "*      1   0   0   0  0\n",
-       "A0     0   1   0   0  0\n",
-       "A1     0   0  22   2  0\n",
-       "A2     0   0   1   2  0\n",
-       "V      0   0   0   0  1"
+       "Y_1   (A0*  (A1*  (A1*)  (A2*   *  *)\n",
+       "ARG                                  \n",
+       "(A0*     1     0      0     0   0   0\n",
+       "(A1*     0     0      0     0   1   0\n",
+       "(A2*     0     1      0     0   0   0\n",
+       "(V*)     0     0      0     0   1   0\n",
+       "*        0     0      1     2  17   4\n",
+       "*)       0     0      0     1   1   0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2= df[['ARG_Y','Yhat']]\n",
-    "table= pd.pivot_table(df2.iloc[:30,:], index='ARG_Y', columns='Yhat', aggfunc=len, fill_value=0)\n",
+    "df2= df[['ARG','Y_1']]\n",
+    "table= pd.pivot_table(df2.iloc[:30,:], index='ARG', columns='Y_1', aggfunc=len, fill_value=0)\n",
     "table"
    ]
   },
