--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../datasets/csvs/zhou_train.csv\n",
-      "../outputs/multi_bibasic_lstm/lr5.00e-04_hs128x64/05/Yhat_train.csv\n"
+      "../datasets/csvs/zhou_valid.csv\n",
+      "../outputs/bilstm_crf/lr5.00e-04_hs128x64/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -36,16 +36,16 @@
     "\n",
     "\n",
     "\n",
-    "MODEL_NAME='multi_bibasic_lstm'\n",
+    "MODEL_NAME='bilstm_crf'\n",
     "HPARAMS_STR='lr5.00e-04_hs128x64'\n",
     "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
-    "INPUT_PATH = '{:}{:}'.format(INPUT_DIR, 'zhou_train.csv')\n",
-    "OUTPUT_PATH= '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'Yhat_train.csv')\n",
-    "TARGET_EVALUATION_PATH= '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'conll_evaluate_train.txt')\n",
-    "TARGET_GOLDENSTD_PATH=  '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'conll_golden_train.txt')\n",
+    "INPUT_PATH = '{:}{:}'.format(INPUT_DIR, 'zhou_valid.csv')\n",
+    "OUTPUT_PATH= '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'Yhat_valid.csv')\n",
+    "TARGET_EVALUATION_PATH= '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'conll_evaluate_valid.txt')\n",
+    "TARGET_GOLDENSTD_PATH=  '{:}{:}/{:}/{:}/{:}'.format(OUTPUT_DIR,MODEL_NAME,HPARAMS_STR,MODEL_V, 'conll_golden_valid.txt')\n",
     "\n",
     "\n",
     "\n",
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(123846, 11) (123846, 2)\n"
+      "(12298, 11) (12298, 2)\n"
      ]
     }
    ],
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(123846, 13)\n"
+      "(12298, 13)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,108 +149,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>123846</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>5101</td>\n",
        "      <td>0</td>\n",
-       "      <td>Brasília</td>\n",
-       "      <td>Brasília</td>\n",
-       "      <td>revelar</td>\n",
+       "      <td>Entre</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123847</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>os</td>\n",
+       "      <td>o</td>\n",
+       "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
        "      <td>*</td>\n",
+       "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>(A0*</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Pesquisa_Datafolha</td>\n",
-       "      <td>Pesquisa_Datafolha</td>\n",
-       "      <td>revelar</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>(A0*</td>\n",
-       "      <td>A0</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>123848</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>5101</td>\n",
        "      <td>0</td>\n",
-       "      <td>publicada</td>\n",
-       "      <td>publicar</td>\n",
-       "      <td>revelar</td>\n",
+       "      <td>convidados</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A0</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>123849</th>\n",
        "      <td>4</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>estão</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>estar</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>hoje</td>\n",
-       "      <td>hoje</td>\n",
-       "      <td>revelar</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>A0</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td>V</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td>V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>123850</th>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>5101</td>\n",
        "      <td>0</td>\n",
-       "      <td>revela</td>\n",
-       "      <td>revelar</td>\n",
-       "      <td>revelar</td>\n",
-       "      <td>revelar</td>\n",
+       "      <td>o</td>\n",
+       "      <td>o</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>-</td>\n",
        "      <td>1</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>V</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>V</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>(A2*)</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ID  S  P  P_S                FORM               LEMMA     PRED     FUNC  \\\n",
-       "IDX                                                                            \n",
-       "0     1  1  2    0            Brasília            Brasília  revelar        -   \n",
-       "1     2  1  2    0  Pesquisa_Datafolha  Pesquisa_Datafolha  revelar        -   \n",
-       "2     3  1  2    0           publicada            publicar  revelar        -   \n",
-       "3     4  1  2    0                hoje                hoje  revelar        -   \n",
-       "4     5  1  2    0              revela             revelar  revelar  revelar   \n",
+       "        ID     S     P  P_S        FORM      LEMMA   PRED   FUNC  M_R ARG_0  \\\n",
+       "IDX                                                                           \n",
+       "123846   1  2879  5101    0       Entre      entre  estar      -    0  (A2*   \n",
+       "123847   2  2879  5101    0          os          o  estar      -    0     *   \n",
+       "123848   3  2879  5101    0  convidados  convidado  estar      -    0    *)   \n",
+       "123849   4  2879  5101    0       estão      estar  estar  estar    1  (V*)   \n",
+       "123850   5  2879  5101    0           o          o  estar      -    1  (A1*   \n",
        "\n",
-       "     M_R ARG_0 ARG_1   Y_0 Y_1  \n",
-       "IDX                             \n",
-       "0      0     *     *  (A0*  A0  \n",
-       "1      0  (A0*    A0     *  A0  \n",
-       "2      0     *    A0     *  A0  \n",
-       "3      0    *)    A0    *)  A0  \n",
-       "4      1  (V*)     V  (V*)   V  "
+       "       ARG_1    Y_0 Y_1  \n",
+       "IDX                      \n",
+       "123846    A2   (A1*  A1  \n",
+       "123847    A2      *  A1  \n",
+       "123848    A2     *)  A1  \n",
+       "123849     V   (V*)   V  \n",
+       "123850    A1  (A2*)  A2  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def outputs_conll(df, target_column='Y_0'):\n",
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,17 +371,15 @@
        "      <th>ARG3</th>\n",
        "      <th>ARG4</th>\n",
        "      <th>ARG5</th>\n",
-       "      <th>ARG6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -388,9 +388,8 @@
        "      <th>1</th>\n",
        "      <td>-</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -398,32 +397,29 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>revelar</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>(A2*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -433,15 +429,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5 ARG6\n",
-       "0        -  (A0*    *    *    *               \n",
-       "1        -     *    *    *    *               \n",
-       "2        -     *    *    *    *               \n",
-       "3        -    *)    *    *    *               \n",
-       "4  revelar  (V*)    *    *    *               "
+       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -   (A1*                         \n",
+       "1      -      *                         \n",
+       "2      -     *)                         \n",
+       "3  estar   (V*)                         \n",
+       "4      -  (A2*)                         "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -505,17 +501,15 @@
        "      <th>ARG3</th>\n",
        "      <th>ARG4</th>\n",
        "      <th>ARG5</th>\n",
-       "      <th>ARG6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -523,10 +517,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -534,32 +527,29 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>estar</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>revelar</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -569,15 +559,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5 ARG6\n",
-       "0        -     *    *    *    *               \n",
-       "1        -  (A0*    *    *    *               \n",
-       "2        -     *    *    *    *               \n",
-       "3        -    *)    *    *    *               \n",
-       "4  revelar  (V*)    *    *    *               "
+       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -  (A2*                         \n",
+       "1      -     *                         \n",
+       "2      -    *)                         \n",
+       "3  estar  (V*)                         \n",
+       "4      -  (A1*                         "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
