--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/bilstm_crf/lr5.00e-04_hs128x64/00/Yhat_valid.csv\n"
+      "../outputs/bilstm_crf/lr5.00e-04_hs128x64/01/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "\n",
     "MODEL_NAME='bilstm_crf'\n",
     "HPARAMS_STR='lr5.00e-04_hs128x64'\n",
-    "MODEL_V= '00'\n",
+    "MODEL_V= '01'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +161,8 @@
        "      <td>0</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A1*</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>(A0*)</td>\n",
+       "      <td>A0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -177,8 +177,8 @@
        "      <td>0</td>\n",
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>(A0*)</td>\n",
+       "      <td>A0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -193,8 +193,8 @@
        "      <td>0</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*)</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>(A0*)</td>\n",
+       "      <td>A0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -209,8 +209,8 @@
        "      <td>1</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>V</td>\n",
+       "      <td>(A0*)</td>\n",
+       "      <td>A0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -225,8 +225,8 @@
        "      <td>1</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A2*)</td>\n",
-       "      <td>A2</td>\n",
+       "      <td>(A0*)</td>\n",
+       "      <td>A0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -243,14 +243,14 @@
        "\n",
        "       ARG_1    Y_0 Y_1  \n",
        "IDX                      \n",
-       "123846    A2   (A1*  A1  \n",
-       "123847    A2      *  A1  \n",
-       "123848    A2     *)  A1  \n",
-       "123849     V   (V*)   V  \n",
-       "123850    A1  (A2*)  A2  "
+       "123846    A2  (A0*)  A0  \n",
+       "123847    A2  (A0*)  A0  \n",
+       "123848    A2  (A0*)  A0  \n",
+       "123849     V  (A0*)  A0  \n",
+       "123850    A1  (A0*)  A0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -328,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -377,7 +377,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*</td>\n",
+       "      <td>(A0*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -387,7 +387,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A0*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -397,7 +397,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>(A0*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -407,7 +407,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>(V*)</td>\n",
+       "      <td>(A0*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -417,7 +417,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A2*)</td>\n",
+       "      <td>(A0*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -430,14 +430,14 @@
       ],
       "text/plain": [
        "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -   (A1*                         \n",
-       "1      -      *                         \n",
-       "2      -     *)                         \n",
-       "3  estar   (V*)                         \n",
-       "4      -  (A2*)                         "
+       "0      -  (A0*)                         \n",
+       "1      -  (A0*)                         \n",
+       "2      -  (A0*)                         \n",
+       "3  estar  (A0*)                         \n",
+       "4      -  (A0*)                         "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -567,7 +567,7 @@
        "4      -  (A1*                         "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,9 +590,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tensorflow)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
