notebooks: corpus-word-processing updated
Former-commit-id: 80972a17bac9396c90de57f970efb37b69db6aef

--- a/notebooks/corpus-words-preprocessing.ipynb
+++ b/notebooks/corpus-words-preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "(141730, 18)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,8 +41,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Fetch LEMMA and Word2Vec model\n",
+    "\n",
+    "Under propbankbr lemmas are transformed tokens ( column 'FORM' ).\n",
+    "* verbs, go to infinitive\n",
+    "* plural gets converted to singular\n",
+    "* multi word terms are joint by underscode '\\_'. ( That comes from token )\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "word2vec= vocab_word2vec(dataset_name='glove_s50')"
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +105,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Preprocessing \n",
+    "\n",
+    "Embeddings from:\n",
+    ">  http://nilc.icmc.usp.br/embeddings\n",
+    "\n",
+    "have been trained with lower cased words."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Lower case"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +148,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Remove  punctuations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +184,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3 All numbers are mapped to zero."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -176,25 +219,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unknown lemmas:280\t missing(%):3.09%\n",
+      "ner candidates lemmas:1304\t missing(%):14.38%\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('corpus-words-missing.txt','w+',encoding=\"utf-8\") as f:\n",
-    "    for word in no_number_missing:\n",
-    "        f.write('{:}\\n'.format(word))"
+    "re_uppercase= re.compile(r'[A-Z]')\n",
+    "ner_candidates=[]\n",
+    "unknowns=[]\n",
+    "for lemma in no_number_missing:\n",
+    "        if re_uppercase.match(lemma):\n",
+    "            ner_candidates.append(lemma)    \n",
+    "        else:\n",
+    "            unknowns.append(lemma)\n",
+    "\n",
+    "print('unknown lemmas:{:d}\\t missing(%):{:.2f}%'.format(len(unknowns), 100*float(len(unknowns))/len(lemmas)))        \n",
+    "print('ner candidates lemmas:{:d}\\t missing(%):{:.2f}%'.format(len(ner_candidates), 100*float(len(ner_candidates))/len(lemmas)))        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1304\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('corpus-words-missing-ner.txt','w+',encoding=\"utf-8\") as f:\n",
+    "    for word in ner_candidates:\n",
+    "        f.write('{:}\\n'.format(word))\n",
+    "        \n",
+    "print(len(ner_candidates))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "280\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('corpus-words-missing-unknowns.txt','w+',encoding=\"utf-8\") as f:\n",
+    "    for word in unknowns:\n",
+    "        f.write('{:}\\n'.format(word))\n",
+    "print(len(unknowns))                "
+   ]
   }
  ],
  "metadata": {
