language model:updated ner tags
Former-commit-id: 0dbbfbba507dee3a03f84890441a9595750bc6ef

--- a/notebooks/corpus-words-preprocessing.ipynb
+++ b/notebooks/corpus-words-preprocessing.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word2vec= vocab_word2vec(dataset_name='glove_s50')"
@@ -221,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4 Separate NER like from unkwnowns"
+    "#### 2.4 Separate NER like from unknowns"
    ]
   },
   {
@@ -1670,24 +1672,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1704,19 +1706,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LOC</th>\n",
-       "      <td>76</td>\n",
+       "      <td>78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>O</th>\n",
-       "      <td>339</td>\n",
+       "      <td>332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ORG</th>\n",
-       "      <td>258</td>\n",
+       "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PER</th>\n",
-       "      <td>631</td>\n",
+       "      <td>629</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1725,13 +1727,13 @@
       "text/plain": [
        "         TOKEN\n",
        "NER_TAG       \n",
-       "LOC         76\n",
-       "O          339\n",
-       "ORG        258\n",
-       "PER        631"
+       "LOC         78\n",
+       "O          332\n",
+       "ORG        265\n",
+       "PER        629"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1745,14 +1747,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_orgs= df_ner[df_ner['NER_TAG']=='ORG']\n",
     "df_orgs.to_csv('corpus-word-missing-orgs.txt', sep='\\t')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_pers= df_ner[df_ner['NER_TAG']=='PER']\n",
+    "df_pers.to_csv('corpus-word-missing-pers.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_o= df_ner[df_ner['NER_TAG']=='O']\n",
+    "df_o.to_csv('corpus-word-missing-o.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
