language model added
Former-commit-id: 7ddca121412add664ad3ee76b14dcf577395a772

--- a/notebooks/corpus-words-preprocessing.ipynb
+++ b/notebooks/corpus-words-preprocessing.ipynb
@@ -1672,9 +1672,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1309\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1706,7 +1713,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LOC</th>\n",
-       "      <td>78</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>O</th>\n",
@@ -1727,19 +1734,21 @@
       "text/plain": [
        "         TOKEN\n",
        "NER_TAG       \n",
-       "LOC         78\n",
+       "LOC         80\n",
        "O          332\n",
        "ORG        265\n",
        "PER        629"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ner= pd.read_csv('corpus-words-missing-ner-tags.txt', sep='\\t', index_col=False)\n",
+    "df_ner.sort_values('TOKEN', axis=0, inplace=True)\n",
+    "print(df_ner.shape[0])\n",
     "table= pd.pivot_table(data=df_ner, index='NER_TAG', values='TOKEN', aggfunc=len)\n",
     "table\n",
     "\n"
@@ -1747,58 +1756,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_orgs= df_ner[df_ner['NER_TAG']=='ORG']\n",
-    "df_orgs.to_csv('corpus-word-missing-orgs.txt', sep='\\t')\n",
-    "\n"
+    "df_orgs= df_ner.loc[df_ner['NER_TAG']=='ORG', :].copy()\n",
+    "df_orgs.sort_values('TOKEN', axis=0, inplace=True)\n",
+    "df_orgs.to_csv('corpus-word-missing-orgs.txt', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_pers= df_ner[df_ner['NER_TAG']=='PER']\n",
-    "df_pers.to_csv('corpus-word-missing-pers.txt', sep='\\t')"
+    "df_pers= df_ner.loc[df_ner['NER_TAG']=='PER',:].copy()\n",
+    "df_pers.sort_values('TOKEN', axis=0, inplace=True)\n",
+    "df_pers.to_csv('corpus-word-missing-pers.txt', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_o= df_ner[df_ner['NER_TAG']=='O']\n",
+    "df_locs= df_ner.loc[df_ner['NER_TAG']=='LOC',:].copy()\n",
+    "df_locs.sort_values('TOKEN', axis=0, inplace=True)\n",
+    "df_locs.to_csv('corpus-word-missing-locs.txt', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_o= df_ner[df_ner['NER_TAG']=='O'].copy()\n",
+    "df_o.sort_values('TOKEN', axis=0, inplace=True)\n",
     "df_o.to_csv('corpus-word-missing-o.txt', sep='\\t')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
